--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!-- 
   Hello 😊.
 
-  This template is designed and developed by Nisar Hassan Naqvi
+  This template is designed and developed by Dipak Neupane
   for anyone to use for free or customize the way they like.
 
-  Github Repo: https://github.com/nisarhassan12/portfolio-template/
-  My Website: https://nisar.dev
+  Github Repo: https://github.com/DipakNeupane1/my-portfolio
+  My Website: https://dipakneupane.dev
 
-  For business & inquires, contact me => syednisarhassan12@gmail.com
+  For business & inquires, contact me => dipakaanupam@gmail.com
 -->
 
 <!--
@@ -24,7 +24,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Mohammad | A AI Developer, Researcher based in Auckland, New Zealand.
+    Dipak | A Software Engineer based in Auckland, New Zealand.
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -56,10 +56,10 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Mohammad</span>
+          <span>Dipak</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A AI Developer, Researcher based in Auckland, New Zealand.</p>
+        <p>A Software Engineer based in Auckland, New Zealand.</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
@@ -90,10 +90,7 @@
               </ul>
 
               <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
+                <a href="https://github.com/DipakNeupane1" title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
@@ -199,7 +196,7 @@
 
           <div class="about__photo-container">
             <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
+            <img class="about__photo" src="./images/ok 2.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -221,7 +218,7 @@
           me is via an email.
         </p>
         <!-- Replace the email with yours -->
-        <a href="mailto:you@example.com" class="btn">you@example.com</a>
+        <a href="dipakaanupam@gmail.com" class="btn">dipakaanupam@gmail.com</a>
       </div>
     </div>
   </section>
@@ -233,22 +230,12 @@
       <!-- Update the links to point to your accounts -->
       <ul class="footer__social-links">
         <li class="footer__social-link-item">
-          <a href="https://twitter.com/nisarhassan12/" title="Link to Twitter Profile">
-            <img src="./images/twitter.svg" class="footer__social-image" alt="Twitter">
-          </a>
-        </li>
-        <li class="footer__social-link-item">
-          <a href="https://github.com/nisarhassan12/" title="Link to Github Profile">
+          <a href="https://github.com/DipakNeupane1" title="Link to Github Profile">
             <img src="./images/github.svg" class="footer__social-image" alt="Github">
           </a>
         </li>
         <li class="footer__social-link-item">
-          <a href="https://codepen.io/nisar_hassan" title="Link to Codepen Profile">
-            <img src="./images/codepen.svg" class="footer__social-image" alt="Codepen">
-          </a>
-        </li>
-        <li class="footer__social-link-item">
-          <a href=https://www.linkedin.com/in/nisar-hassan-naqvi-413466199/">
+          <a href=https://www.linkedin.com/in/dipak-neupane-ab727a128/">
             <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
         </li>
@@ -256,11 +243,11 @@
 
       <!-- If you give me some credit by keeping the below paragraph, will be huge for me 😊 Thanks. -->
       <p>
-        &copy; 2020 - Template designed & developed by <a href="https://nisar.dev" class="link">Nisar</a>.
+        &copy; 2025 - Template designed & developed by <a href="https://www.linkedin.com/in/dipak-neupane-ab727a128/" class="link">Dipak</a>.
       </p>
       <div class="footer__github-buttons">
         <iframe
-          src="https://ghbtns.com/github-btn.html?user=nisarhassan12&repo=portfolio-template&type=watch&count=true"
+          src="https://ghbtns.com/github-btn.html?user=DipakNeupane1&repo=portfolio-template&type=watch&count=true"
           frameborder="0" scrolling="0" width="170" height="20" title="Watch Portfolio Template on GitHub">
         </iframe>
       </div>
