about me added.

--- a/index.html
+++ b/index.html
@@ -185,10 +185,13 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-              nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-              in vel, ex quam quidem quos mollitia labore aut sunt eius
-              ratione molestiae fuga veniam facere similique voluptate.
+              I am an experienced software engineer with more than seven years of professional experience in software development,
+              where I have led and collaborated on a variety of projects using a wide range of technologies.
+              Over the years, I have gained proven expertise across all phases of the software development life cycle, from design and development to testing and deployment.
+              I am also certified in Azure, Databricks, and CKAD, which has strengthened my ability to build scalable, cloud-native, and data-driven applications.
+              My journey in IT began back in 2018, when I started as a backend developer with little knowledge but a tremendous level of confidence and a willingness to learn.
+              That first opportunity laid the foundation for my career, and since then, I have worked extensively in fintech and data-intensive applications while continuously embracing new technologies.
+              My technical expertise spans backend APIs, distributed systems, enterprise applications, and real-time data solutions, with hands-on experience in frameworks like FastAPI, Uvicorn, Pydantic, and cloud-based platforms.
             </p>
             <!-- Provide a link to your resume -->
             <a href="#" class="btn">My Resume</a>
