--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
           <div class="about__photo-container">
             <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/ok 2.jpg" alt="" />
+            <img class="about__photo" src="./images/IMG_0063.jpg" alt="" />
           </div>
         </div>
       </div>
