about me added.

--- a/index.html
+++ b/index.html
@@ -185,13 +185,10 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              I am an experienced software engineer with more than seven years of professional experience in software development,
-              where I have led and collaborated on a variety of projects using a wide range of technologies.
-              Over the years, I have gained proven expertise across all phases of the software development life cycle, from design and development to testing and deployment.
-              I am also certified in Azure, Databricks, and CKAD, which has strengthened my ability to build scalable, cloud-native, and data-driven applications.
-              My journey in IT began back in 2018, when I started as a backend developer with little knowledge but a tremendous level of confidence and a willingness to learn.
-              That first opportunity laid the foundation for my career, and since then, I have worked extensively in fintech and data-intensive applications while continuously embracing new technologies.
-              My technical expertise spans backend APIs, distributed systems, enterprise applications, and real-time data solutions, with hands-on experience in frameworks like FastAPI, Uvicorn, Pydantic, and cloud-based platforms.
+              I am a software engineer with 7+ years of experience in building scalable, data-intensive, and fintech applications.
+              Skilled across the full software development life cycle, I have led and contributed to projects using a wide range of technologies, with certifications in Azure, Databricks, and CKAD.
+              Starting my career in 2018 as a backend developer, I’ve grown from a curious learner into an engineer passionate about solving complex problems and working with emerging technologies.
+              I thrive in dynamic environments, adapt quickly to new tools, and bring a balance of confidence, patience, and a can-do attitude to every project.
             </p>
             <!-- Provide a link to your resume -->
             <a href="#" class="btn">My Resume</a>
